--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,17 +2,7 @@
 	Story by HTML5 UP
 */
 
-html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
-pre, a, abbr, acronym, address, big, cite,
-code, del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside,
-canvas, details, embed, figure, figcaption,
-footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -20,8 +10,7 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;}
 
 body {
@@ -110,42 +99,11 @@ input, select, textarea {
 
 /* Type */
 
-	html {
-		font-size: 18pt;
-	}
-
-		@media screen and (max-width: 1680px) {
-
-			html {
-				font-size: 14pt;
-			}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			html {
-				font-size: 12pt;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			html {
-				font-size: 11pt;
-			}
-
-		}
-
-		@media screen and (max-width: 360px) {
-
-			html {
-				font-size: 10pt;
-			}
-
-		}
-
+	html { font-size: 18pt; }
+		@media screen and (max-width: 1680px) { html { font-size: 14pt; } }
+		@media screen and (max-width: 1280px) { html { font-size: 12pt; } }
+		@media screen and (max-width: 736px) { html { font-size: 11pt; } }
+		@media screen and (max-width: 360px) { html { font-size: 10pt; } }
 	body {
 		background-color: #ffffff;
 		color: #000000;
@@ -199,30 +157,12 @@ input, select, textarea {
 			text-decoration: none;
 		}
 
-	h1 {
-		font-size: 3.5rem;
-		line-height: 1.2;
-	}
-
-	h2 {
-		font-size: 2.25rem;
-	}
-
-	h3 {
-		font-size: 1.5rem;
-	}
-
-	h4 {
-		font-size: 1.1rem;
-	}
-
-	h5 {
-		font-size: 0.9rem;
-	}
-
-	h6 {
-		font-size: 0.7rem;
-	}
+	h1 { font-size: 3.5rem; line-height: 1.2; }
+	h2 { font-size: 2.25rem; }
+	h3 { font-size: 1.5rem; }
+	h4 { font-size: 1.1rem; }
+	h5 { font-size: 0.9rem; }
+	h6 { font-size: 0.7rem; }
 
 	sub {
 		font-size: 0.8rem;
@@ -275,39 +215,17 @@ input, select, textarea {
 			margin: 3.5rem 0;
 		}
 
-	.align-left {
-		text-align: left;
-	}
-
-	.align-center {
-		text-align: center;
-	}
-
-	.align-right {
-		text-align: right;
-	}
+	.align-left { text-align: left; }
+	.align-center { text-align: center; }
+	.align-right { text-align: right; }
 
 	@media screen and (max-width: 736px) {
 
-		p.major {
-			font-size: 1.1rem;
-		}
-
-		h1 {
-			font-size: 2.5rem;
-		}
-
-		h2 {
-			font-size: 2rem;
-		}
-
-		h3 {
-			font-size: 1.25rem;
-		}
-
-		h4 {
-			font-size: 1rem;
-		}
+		p.major { font-size: 1.1rem; }
+		h1 { font-size: 2.5rem; }
+		h2 { font-size: 2rem; }
+		h3 { font-size: 1.25rem; }
+		h4 { font-size: 1rem; }
 
 	}
 
@@ -353,239 +271,64 @@ input, select, textarea {
 		align-items: stretch;
 	}
 
-		.row > * {
-			box-sizing: border-box;
-		}
+		.row > * { box-sizing: border-box; }
+		.row.gtr-uniform > * > :last-child { margin-bottom: 0; }
+		.row.aln-left { justify-content: flex-start; }
+		.row.aln-center { justify-content: center; }
+		.row.aln-right { justify-content: flex-end; }
+		.row.aln-top { align-items: flex-start; }
+		.row.aln-middle { align-items: center; }
+		.row.aln-bottom { align-items: flex-end; }
+		.row > .imp { order: -1; }
+		.row > .col-1 { width: 8.33333%; }
+		.row > .off-1 { margin-left: 8.33333%; }
+		.row > .col-2 { width: 16.66667%; }
+		.row > .off-2 { margin-left: 16.66667%; }
+		.row > .col-3 { width: 25%; }
+		.row > .off-3 { margin-left: 25%; }
+		.row > .col-4 { width: 33.33333%; }
+		.row > .off-4 { margin-left: 33.33333%; }
+		.row > .col-5 { width: 41.66667%; }
+		.row > .off-5 { margin-left: 41.66667%; }
+		.row > .col-6 { width: 50%; }
+		.row > .off-6 { margin-left: 50%; }
+		.row > .col-7 { width: 58.33333%; }
+		.row > .off-7 { margin-left: 58.33333%; }
+		.row > .col-8 { width: 66.66667%; }
+		.row > .off-8 { margin-left: 66.66667%; }
+		.row > .col-9 { width: 75%; }
+		.row > .off-9 { margin-left: 75%; }
+		.row > .col-10 { width: 83.33333%; }
+		.row > .off-10 { margin-left: 83.33333%; }
+		.row > .col-11 { width: 91.66667%; }
+		.row > .off-11 { margin-left: 91.66667%; }
+		.row > .col-12 { width: 100%; }
+		.row > .off-12 { margin-left: 100%; }
 
-		.row.gtr-uniform > * > :last-child {
-			margin-bottom: 0;
-		}
-
-		.row.aln-left {
-			justify-content: flex-start;
-		}
-
-		.row.aln-center {
-			justify-content: center;
-		}
-
-		.row.aln-right {
-			justify-content: flex-end;
-		}
-
-		.row.aln-top {
-			align-items: flex-start;
-		}
-
-		.row.aln-middle {
-			align-items: center;
-		}
-
-		.row.aln-bottom {
-			align-items: flex-end;
-		}
-
-		.row > .imp {
-			order: -1;
-		}
-
-		.row > .col-1 {
-			width: 8.33333%;
-		}
-
-		.row > .off-1 {
-			margin-left: 8.33333%;
-		}
-
-		.row > .col-2 {
-			width: 16.66667%;
-		}
-
-		.row > .off-2 {
-			margin-left: 16.66667%;
-		}
-
-		.row > .col-3 {
-			width: 25%;
-		}
-
-		.row > .off-3 {
-			margin-left: 25%;
-		}
-
-		.row > .col-4 {
-			width: 33.33333%;
-		}
-
-		.row > .off-4 {
-			margin-left: 33.33333%;
-		}
-
-		.row > .col-5 {
-			width: 41.66667%;
-		}
-
-		.row > .off-5 {
-			margin-left: 41.66667%;
-		}
-
-		.row > .col-6 {
-			width: 50%;
-		}
-
-		.row > .off-6 {
-			margin-left: 50%;
-		}
-
-		.row > .col-7 {
-			width: 58.33333%;
-		}
-
-		.row > .off-7 {
-			margin-left: 58.33333%;
-		}
-
-		.row > .col-8 {
-			width: 66.66667%;
-		}
-
-		.row > .off-8 {
-			margin-left: 66.66667%;
-		}
-
-		.row > .col-9 {
-			width: 75%;
-		}
-
-		.row > .off-9 {
-			margin-left: 75%;
-		}
-
-		.row > .col-10 {
-			width: 83.33333%;
-		}
-
-		.row > .off-10 {
-			margin-left: 83.33333%;
-		}
-
-		.row > .col-11 {
-			width: 91.66667%;
-		}
-
-		.row > .off-11 {
-			margin-left: 91.66667%;
-		}
-
-		.row > .col-12 {
-			width: 100%;
-		}
-
-		.row > .off-12 {
-			margin-left: 100%;
-		}
-
-		.row.gtr-0 {
-			margin-top: 0;
-			margin-left: 0rem;
-		}
-
-			.row.gtr-0 > * {
-				padding: 0 0 0 0rem;
-			}
-
-			.row.gtr-0.gtr-uniform {
-				margin-top: 0rem;
-			}
-
-				.row.gtr-0.gtr-uniform > * {
-					padding-top: 0rem;
-				}
-
-		.row.gtr-25 {
-			margin-top: 0;
-			margin-left: -0.5rem;
-		}
-
-			.row.gtr-25 > * {
-				padding: 0 0 0 0.5rem;
-			}
-
-			.row.gtr-25.gtr-uniform {
-				margin-top: -0.5rem;
-			}
-
-				.row.gtr-25.gtr-uniform > * {
-					padding-top: 0.5rem;
-				}
-
-		.row.gtr-50 {
-			margin-top: 0;
-			margin-left: -1rem;
-		}
-
-			.row.gtr-50 > * {
-				padding: 0 0 0 1rem;
-			}
-
-			.row.gtr-50.gtr-uniform {
-				margin-top: -1rem;
-			}
-
-				.row.gtr-50.gtr-uniform > * {
-					padding-top: 1rem;
-				}
-
-		.row {
-			margin-top: 0;
-			margin-left: -2rem;
-		}
-
-			.row > * {
-				padding: 0 0 0 2rem;
-			}
-
-			.row.gtr-uniform {
-				margin-top: -2rem;
-			}
-
-				.row.gtr-uniform > * {
-					padding-top: 2rem;
-				}
-
-		.row.gtr-150 {
-			margin-top: 0;
-			margin-left: -3rem;
-		}
-
-			.row.gtr-150 > * {
-				padding: 0 0 0 3rem;
-			}
-
-			.row.gtr-150.gtr-uniform {
-				margin-top: -3rem;
-			}
-
-				.row.gtr-150.gtr-uniform > * {
-					padding-top: 3rem;
-				}
-
-		.row.gtr-200 {
-			margin-top: 0;
-			margin-left: -4rem;
-		}
-
-			.row.gtr-200 > * {
-				padding: 0 0 0 4rem;
-			}
-
-			.row.gtr-200.gtr-uniform {
-				margin-top: -4rem;
-			}
-
-				.row.gtr-200.gtr-uniform > * {
-					padding-top: 4rem;
-				}
+		.row.gtr-0 { margin-top: 0; margin-left: 0rem; }
+			.row.gtr-0 > * { padding: 0 0 0 0rem; }
+			.row.gtr-0.gtr-uniform { margin-top: 0rem; }
+				.row.gtr-0.gtr-uniform > * { padding-top: 0rem; }
+		.row.gtr-25 { margin-top: 0; margin-left: -0.5rem; }
+			.row.gtr-25 > * { padding: 0 0 0 0.5rem; }
+			.row.gtr-25.gtr-uniform { margin-top: -0.5rem; }
+				.row.gtr-25.gtr-uniform > * { padding-top: 0.5rem; }
+		.row.gtr-50 { margin-top: 0; margin-left: -1rem; }
+			.row.gtr-50 > * { padding: 0 0 0 1rem; }
+			.row.gtr-50.gtr-uniform { margin-top: -1rem; }
+				.row.gtr-50.gtr-uniform > * { padding-top: 1rem; }
+		.row { margin-top: 0; margin-left: -2rem; }
+			.row > * { padding: 0 0 0 2rem; }
+			.row.gtr-uniform { margin-top: -2rem; }
+				.row.gtr-uniform > * { padding-top: 2rem; }
+		.row.gtr-150 { margin-top: 0; margin-left: -3rem; }
+			.row.gtr-150 > * { padding: 0 0 0 3rem; }
+			.row.gtr-150.gtr-uniform { margin-top: -3rem; }
+				.row.gtr-150.gtr-uniform > * { padding-top: 3rem; }
+		.row.gtr-200 { margin-top: 0; margin-left: -4rem; }
+			.row.gtr-200 > * { padding: 0 0 0 4rem; }
+			.row.gtr-200.gtr-uniform { margin-top: -4rem; }
+				.row.gtr-200.gtr-uniform > * { padding-top: 4rem; }
 
 		@media screen and (max-width: 1680px) {
 
@@ -8703,4 +8446,5 @@ input, select, textarea {
     padding-right: 40px;
   }
 }
+
 
