--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6502,3 +6502,61 @@ input, select, textarea {
     padding: 15px 20px;
   }
 }
+
+/* test acc */
+.image-accordion {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2em;
+}
+
+.accordion-item {
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.accordion-header {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.accordion-header img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.accordion-header h3 {
+  position: absolute;
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  margin: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  background: #f4f4f4;
+  padding: 0 20px;
+}
+
+input[type="radio"]:checked + .accordion-header img {
+  transform: scale(1.05);
+}
+
+input[type="radio"]:checked ~ .accordion-content {
+  max-height: 200px; /* Điều chỉnh theo nội dung */
+  padding: 20px;
+}
+
+input[type="radio"] {
+  display: none;
+}
